# copilot-agent-contracts

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml
examples/customer-support/: README.md  agent-contracts.toml
examples/customer-support/.github/agents/: customer-support.agent.md
examples/customer-support/.github/prompts/: request-refund.prompt.md
examples/customer-support/contracts/: modes.jsonl  routing.jsonl
src/copilot_agent_contracts/: __init__.py  __main__.py  cli.py  config.py  engine.py  markdown.py  model.py  rules.py
tests/: test_cli.py  test_cli_edges.py  test_config.py  test_config_edges.py  test_engine.py  test_markdown.py  test_markdown_edges.py  test_model.py  test_rule_edges.py  test_rules.py
