[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "copilot-agent-contracts"
version = "0.1.0"
description = "Static contract tests for GitHub Copilot custom agents and prompt files"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Marcus Felling" },
]
keywords = ["github-copilot", "custom-agents", "prompt-engineering", "testing", "evals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.3",
]

[project.scripts]
copilot-agent-contracts = "copilot_agent_contracts.cli:main"

[project.urls]
Homepage = "https://github.com/MarcusFelling/copilot-agent-contracts"
Issues = "https://github.com/MarcusFelling/copilot-agent-contracts/issues"
Repository = "https://github.com/MarcusFelling/copilot-agent-contracts"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_agent_contracts"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["copilot_agent_contracts"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
